More system upgrade work